zigbee2mqtt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt-ingress
  labels:
    app: zigbee2mqtt
    component: ingress
  labels:
    gethomepage.dev/enabled: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/auth-url: "https://auth.checinski.xyz/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: https://auth.checinski.xyz/oauth2/start
    gethomepage.dev/name: zigbee2mqtt
    gethomepage.dev/group: hass
spec:
  tls:
    - hosts:
        - zigbee2mqtt.checinski.xyz
      secretName: zigbee2mqtt-checinski-xyz-tls
  rules:
    - host: zigbee2mqtt.checinski.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 80
